--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="container1">
-     <div class="hey">  <h2>TAKE ME</h2></div>
-      <div class="hey" ><p>TO A</p></div>
-      <div class="useless "><h2>USELESS <br > WEBSITE</h2></div>
+      <h2>TAKE ME</h2>
+      <p>TO ANOTHER</p>
+     <h2>USELESS <br > WEBSITE</h2>
        <div class="button"> 
          <p class="arrow">→  <button id="button">PLEASE </button> ←</p>
        </div>
