--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
          <p class="arrow">→  <button id="button">PLEASE </button> ←</p>
        </div>
     </div>
-    <nav class="navbar fixed-bottom navbar-expand-sm  bg-dark">
+    <nav class="navbar fixed-bottom navbar-expand-sm col-md-12 bg-dark">
         <div class="container-fluid bg-dark">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler 
+          " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse bg-dark" id="navbarCollapse">
