--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <p class="arrow">→  <button id="button">PLEASE </button> ←</p>
        </div>
     </div>
-    <nav class="navbar fixed-bottom navbar-expand-sm col-md-12 bg-dark">
+    <nav class="navbar fixed-bottom navbar-expand-sm mb-0 bg-dark">
         <div class="container-fluid bg-dark">
           <button class="navbar-toggler 
           " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
