--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        </div>
     </div>
     <nav class="navbar fixed-bottom navbar-expand-sm mb-0 bg-dark">
-        <div class="container-fluid bg-dark">
+        <div class="container-fluid bg-dark mb-0">
           <button class="navbar-toggler 
           " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,4 +37,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
-<a href=""></a>
+
